[tool.poetry]
name = "Cat_or_dog_breed"
version = "0.1.0"
description = ""
authors = ["Mustapha Ayadi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pillow = "^9.5.0"
matplotlib = "^3.7.1"
pyqt5 = "^5.15.9"
pandas = "^2.0.1"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp310-cp310-win_amd64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
